refactored into junit 5 and (some) set/map factory methods of java 9