@@ -1,101 +1,61 @@
 package se.montesmites.ekonomi.report;
 
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import se.montesmites.ekonomi.organization.Organization;
+import testdata.DefaultTestDataExtension;
+import testdata.OrganizationInjector;
+
 import java.time.Year;
 import java.util.AbstractMap.SimpleEntry;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
+
 import static org.junit.Assert.assertEquals;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.ClassRule;
-import org.junit.Test;
-import org.junit.rules.TemporaryFolder;
-import se.montesmites.ekonomi.organization.Organization;
-import static se.montesmites.ekonomi.report.CashflowReport_AccountGroup_2012.BOKFORT_RESULTAT;
-import static se.montesmites.ekonomi.report.CashflowReport_AccountGroup_2012.KORTFRISTIGA_SKULDER;
-import static se.montesmites.ekonomi.report.CashflowReport_AccountGroup_2012.assertBodyRowDescriptions;
-import static se.montesmites.ekonomi.report.CashflowReport_AccountGroup_2012.assertExpectedAverages;
-import static se.montesmites.ekonomi.report.CashflowReport_AccountGroup_2012.assertMonthlyAmounts;
-import static se.montesmites.ekonomi.report.CashflowReport_AccountGroup_2012.bodyRowsOf;
+import static se.montesmites.ekonomi.report.CashflowReport_AccountGroup_2012.*;
 
-import se.montesmites.ekonomi.organization.OrganizationBuilder;
-import se.montesmites.ekonomi.test.util.ResourceToFileCopier;
-
-public class CashflowReport_TwoSections_OneRowEach_Test {
-
-    @ClassRule
-    public static TemporaryFolder tempfolder = new TemporaryFolder();
+@ExtendWith(DefaultTestDataExtension.class)
+class CashflowReport_TwoSections_OneRowEach_Test {
 
     private final Year year = Year.of(2012);
 
+    @OrganizationInjector
     private Organization organization;
     private CashflowDataFetcher fetcher;
     private CashflowReport report;
 
-    @BeforeClass
-    public static void beforeClass() throws Exception {
-        ResourceToFileCopier copier = new ResourceToFileCopier();
-        copier.copyAll(tempfolder);
-    }
-
-    @Before
-    public void before() throws Exception {
-        this.organization = new OrganizationBuilder(tempfolder.getRoot().toPath()).build();
+    @BeforeEach
+    void before() {
         this.fetcher = new CashflowDataFetcher(this.organization);
-        this.report = new CashflowReport(
-                fetcher,
-                year,
-                () -> sections().stream().map(e -> e.getKey()));
+        this.report = new CashflowReport(fetcher, year, () -> sections().stream().map(Map.Entry::getKey));
     }
 
     private List<Map.Entry<Section, List<CashflowReport_AccountGroup_2012>>> sections() {
-        return Arrays.asList(
-                section(
-                        "Bokfört resultat",
-                        Arrays.asList(BOKFORT_RESULTAT)),
-                section(
-                        "Kortfristiga skulder",
-                        Arrays.asList(KORTFRISTIGA_SKULDER)));
+        return List.of(section("Bokfört resultat", List.of(BOKFORT_RESULTAT)), section("Kortfristiga skulder", List.of(KORTFRISTIGA_SKULDER)));
     }
 
-    private Map.Entry<Section, List<CashflowReport_AccountGroup_2012>> section(
-            String title, List<CashflowReport_AccountGroup_2012> groups) {
-        return new SimpleEntry<>(
-                new DefaultSection(
-                        title,
-                        () -> bodyRowsOf(
-                                fetcher,
-                                groups)),
-                groups);
+    private Map.Entry<Section, List<CashflowReport_AccountGroup_2012>> section(String title, List<CashflowReport_AccountGroup_2012> groups) {
+        return new SimpleEntry<>(new DefaultSection(title, () -> bodyRowsOf(fetcher, groups)), groups);
     }
 
     @Test
-    public void sectionCount() {
+    void sectionCount() {
         assertEquals(sections().size(), report.streamSections().count());
     }
 
     @Test
-    public void body_rowDescription() {
-        sections().stream().forEach(section
-                -> assertBodyRowDescriptions(
-                        section.getKey(),
-                        section.getValue()));
+    void body_rowDescription() {
+        sections().forEach(section -> assertBodyRowDescriptions(section.getKey(), section.getValue()));
     }
 
     @Test
-    public void testMonthlyAmountsForGroupedRow() {
-        sections().stream().forEach(section
-                -> assertMonthlyAmounts(
-                        section.getKey(),
-                        section.getValue()));
+    void testMonthlyAmountsForGroupedRow() {
+        sections().forEach(section -> assertMonthlyAmounts(section.getKey(), section.getValue()));
     }
-    
+
     @Test
-    public void testAverage() {
-        sections().stream().forEach(section
-        -> assertExpectedAverages(
-                section.getKey(),
-                section.getValue()));
+    void testAverage() {
+        sections().forEach(section -> assertExpectedAverages(section.getKey(), section.getValue()));
     }
 }
